Version 2.1.96
    Added the setting 'ExploitFix.PistonCheating' to experience.yml at the request of a user
    Added a missing 's' to Nether_Bricks (thanks Sikatsu) in experience.yml

    NOTES:
    You shouldn't need to update you config entry for Nether_Bricks, I believe that file updates automatically (the old config system is a bit janky, some stuff updates, some other stuff doesn't.)
    PistonCheating prevents blocks from being marked "natural" once they've been moved, we've never had an option for this before.
    A discord user requested it, its a strange request but I added it anyways.
    Of course, it defaults to "true" which prevents cheating with pistons.

Version 2.1.95
    Added missing Chorus_Fruit & Chorus_Plant entries to Herbalism's Bonus Drops in config.yml (See notes)
    Limit Break now does dramatically less damage to players with lower grades of armor
    Limit Break damage bonuses now only apply to Players
    Updated in game text to reflect changes to Limit Break
    Fixed a bug where opponents used your stats instead of their own to activate Iron Grip
    Fixed a bug preventing Wandering Traders from granting XP
    Fixed a bug that prevented Chorus Tree's from giving full XP if you broke anything other than the bottom block
    Fixed a bug which could cause Large Fern's to reward less XP
    Fixed a bug where certain herbalism crops could have fewer than intended bonus drops
    Fixed a bug involving Ender Pearl and Acrobatics
    Added some protection to Acrobatics to prevent gaining too much XP in one Roll.
    Added 'Carrots, Cocoa, Potatoes, Wheat, Beetroots, Nether_Wart' to Herbalism in experience.yml (See notes)
    Removed the _Ripe entries from experience.yml (no longer used)
    Updated locale string 'Swords.SubSkill.SwordsLimitBreak.Description' & 'Swords.SubSkill.SwordsLimitBreak.Stat'
    Added missing 'Chorus_Flower' entry to herbalism in experience.yml
    Added some debug messages about XP gains if you are in debug mode